--- a/src/resource/views/now_showing.hbs
+++ b/src/resource/views/now_showing.hbs
@@ -16,8 +16,8 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
+            <div class="col-1"></div>
+            <div class="col-10">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">
@@ -34,7 +34,7 @@
                 <div class="movie">
                     <div class="row">
                         {{#each films}}
-                        <div class="col-md-3 movie-item">
+                        <div class="col-lg-3 col-md-4 col-sm-6 movie-item">
                             <div class="image-container">
                                 <img src="./img/{{poster}}" class="movie-image" />
                                 <div class="hidden-content">
