--- a/src/public/css/favorable.css
+++ b/src/public/css/favorable.css
@@ -1,181 +1,121 @@
-body {
-    margin: 10px;
+.nav-tabs {
+    margin-top: 30px;
+}
+.link a {
+    text-decoration: none;
+    color: gray;
 }
 
-.khuyen-mai:hover {
+.link a:hover {
     text-decoration: none;
     color: orange;
 }
 
-.img-khuyen-mai {
-    width: 100%;
-    height: auto;
-    display: table-cell;
-    margin: 10px;
+.link label {
+    color: gray;
 }
 
-.img-KM-container {
-    position: relative;
-    display: flex;
+#arrow {
+    margin-right: 10px;
 }
-  
-.caption {
-    position: absolute;
-    color: white;
-    opacity: 0;
-    text-align: center;
-    padding-top: 10px;
-    padding-left: 15px;
+.nav-link {
+    font-weight: bold;
+    color: #a8a4a6;
 }
 
-.main-cap {
-    word-break: break-word;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    max-height: 82px;
-    -webkit-line-clamp: 2; /* number of lines to show */
-    -webkit-box-orient: vertical;
-    padding: 5px;
-}
-  
-.img-KM-container:hover .caption {
-    opacity: 1;
+.nav-link:hover {
+    color: #f36b39;
 }
 
-.img-KM-container:hover .img-khuyen-mai {
-    filter: brightness(35%);
+.movie {
+    margin-top: 30px;
 }
 
-.chi-tiet {
-    width: 100px;
-    padding: 10px;
-    color: white;
-    background-color: rgba(0, 0, 0, 0);
-    border: 1px solid #fff;
-}
-
-.chi-tiet:hover {
-    border: 1px solid #e46434;
-    background-color: #e46434;
-}
-
-.chi-tiet-btn{
-    text-align: center;
-    padding-top: 80px;
-    padding-left: 10px;
-}
-
-.mua-ve-nhanh {
-    margin-bottom: 20px;
-}
-
-.mua-ve {
-    width: 100px;
-    padding: 10px;
-    color: white;
-    background-color: #f46c3c;
-    border: 0;
-}
-
-.mua-ve:hover {
-    background-color: #e46434;
-}
-
-.mua-ve-btn{
-    text-align: right;
-    margin-right: 25px;
+.movie-item {
     margin-bottom: 30px;
 }
 
-.sl {
-    width: 300px;
-    height: 40px;
-    margin-bottom: 15px;
-}
-
-.img-phim {
-    width: 100%;
-    height: auto;
-    display: table-cell;
-}
-
-.movie-item-container {
+.image-container {
     position: relative;
     display: inline-block;
 }
-  
-.mua-ve-PDC-btn {
+
+.hidden-content {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     color: #fff;
-    padding-bottom: 90px;
+    padding-bottom: 180px;
+    /* box-sizing: border-box; */
     opacity: 0;
+    /* transition: opacity 0.3s ease-in-out; */
     text-align: center;
 }
 
-.movie-item:hover .mua-ve-PDC-btn {
+.movie-c {
+    background-color: #f36b39;
+    font-size: 14px;
+    padding: 2px;
+    font-weight: 400;
+    transition: 0.3s;
+}
+
+.hidden-button {
+    background-color: rgba(0, 0, 0, 0);
+    color: #fff5f0;
+    border: 1px solid #fff5f0;
+    height: 45px;
+    width: 110px;
+}
+
+.hidden-button:hover {
+    background-color: #f36b39;
+    color: #fff5f0;
+    border: 1px solid #f36b39;
+    transition: 0.4s;
+}
+
+.image-container:hover .hidden-content {
     opacity: 1;
 }
 
-.movie-item:hover .img-phim {
+.movie-image {
+    width: 100%;
+}
+
+.image-container:hover .movie-image {
     filter: brightness(35%);
+    transition: 0.2s;
 }
 
-.movie-item {
-    margin-bottom: 15px;
+.movie-name {
+    margin-top: 10px;
 }
 
-.mua-ve-PDC {
-    width: 100px;
-    padding: 10px;
-    color: white;
-    background-color: rgba(0, 0, 0, 0);
-    border: 1px solid #fff;
+.cinema-name-des h4 {
+    color: #42464a;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
-.mua-ve-PDC:hover {
-    border: 1px solid #e46434;
-    background-color: #e46434;
+.cinema-name-des h4:after {
+    display: block;
+    width: 55px;
+    height: 3px;
+    margin-top: 10px;
+    content: "";
+    background-color: #f36a38;
+    margin-bottom: 25px;
 }
 
-.mua-ve-PDC-btn{
-    text-align: center;
-    padding-top: 80px;
-    padding-left: 10px;
+.movie-des {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: justify;
+    font-size: 14px;
 }
 
-.old {
-    color: white;
-    background-color: #f46c3c;
-    border: 0;
+.movie-des h6 {
+    margin-bottom: 20px;
 }
-
-.sl-all {
-    background-color: #f7f8f9;
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 1px;
-}
-
-.xem-them {
-    width: 150px;
-    padding: 10px;
-    color: #f46c3c;
-    background-color: white;
-    border: #e46434;
-    border: 1px solid #e46434;
-}
-
-.xem-them:hover {
-    color: white;
-    background-color: #e46434;
-}
-
-.xem-them-btn {
-    text-align: right;
-    margin-bottom: 30px;
-}
-
