--- a/src/resource/views/fav_detail.hbs
+++ b/src/resource/views/fav_detail.hbs
@@ -10,8 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/css/movie_review_detail.css">
-    <title>Chi tiết bình luận phim</title>
+    <link rel="stylesheet" href="/css/fav_detail.css">
+    <title>Chi tiết ưu đãi</title>
 </head>
 
 <body>
@@ -20,65 +20,30 @@
             <div class="col-1"></div>
             <div class="col-7">
                 <div class="col-11">
-                    {{#each tin}}
+                    {{#each fav}}
                     <div class="link mb-3">
                         <a href="/">Trang chủ</a>
                         <label>></label>
-                        <a href="/binh-luan-phim">Bình luận phim</a>
+                        <a href="/uu-dai">Ưu đãi</a>
                         <label id="arrow">></label>
-                        Chi tiết bình luận phim
+                        Chi tiết ưu đãi
                     </div>
                     <div class="title mb-3">
-                        <h3>{{tieude}}</h3>
-                    </div>
-
-                    <div class="rate d-flex mb-3">
-                        <div class="view"><img id="icon__view" src="/img/view.png" alt="iconView"><span id="numView">
-                                {{luotxem}}</span></div>
+                        <h3>{{tenkhuyenmai}}</h3>
                     </div>
 
                     <div class="content-cover">
+                        
                         <div class="content">
-                            <p>{{ctnoidung1}}</p>
+                            <p>{{chitiet}}</p>
                         </div>
-
                         <div class="img-content">
-                            <img src="{{cthinhanh1}}" alt="">
+                            <img src="/img/{{hinhkhuyenmaingang}}" alt="">
                         </div>
 
-
-                        <div class="content">
-                            <p>{{ctnoidung2}}</p>
-                        </div>
-
-                        <div class="img-content">
-                            <img src="{{cthinhanh2}}" alt="">
-                        </div>
-
-
-                        <div class="content">
-                            <p>{{ctnoidung3}}</p>
-                        </div>
-
-                        <div class="img-content">
-                            <img src="{{cthinhanh3}}" alt="">
-                        </div>
-
-
-                        <div class="content">
-                            <p>{{ctnoidung4}}</p>
-                        </div>
+                        
                     </div>
                     {{/each}}
-                    <div class="related-blog mb-3">
-                        <h4>BÀI VIẾT LIÊN QUAN</h4>
-                        {{#each data}}
-                        <div class="mb-2">
-                            <a class="related-blog" href="{{matin}}">{{tieude}}</a>
-                        </div>
-                        {{/each}}
-
-                    </div>
                 </div>
             </div>
             <div class="col-3 right">
