--- a/src/resource/views/favorable.hbs
+++ b/src/resource/views/favorable.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,108 +14,40 @@
 
     <link rel="stylesheet" href="/css/favorable.css">
 </head>
+
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-8 col-sm-8 col-xs-12">
-                <a href="" class="disabled khuyen-mai">
-                    <h4>KHUYẾN MÃI MỚI</h4>
-                </a>
-                <div class="row">
-                    <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div class="img-KM-container">
-                            <a href="#">
-                                <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
-                            </a>
-                            
-                            <div class="caption">
-                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
-                                <br>
-                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
-                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                    <div class="chi-tiet-btn">
-                                        <button class="chi-tiet">CHI TIẾT</button>
-                                    </div>
-                                </a>
+            <div class="col-1"></div>
+            <div class="col-10">
+                <div class="movie">
+                    <div class="row">
+                        <div class="link mb-3">
+                            <a href="/">Trang chủ</a>
+                            <label id="arrow">></label>
+                            Ưu đãi
+                        </div>
+                        {{#each fav}}
+                        <div class="col-lg-3 col-md-4 col-sm-6 movie-item">
+                            <div class="image-container">
+                                <img src="/img/{{hinhkhuyenmai}}" class="movie-image" />
+                                <div class="hidden-content">
+                                    <a href="/chi-tiet-khuyen-mai/{{makhuyenmai}}">
+                                        <button class="hidden-button" id="hidden-button">CHI TIẾT</button>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="movie-name">
+                                <h6>{{tenkhuyenmai}}</h6>
                             </div>
                         </div>
-                    </div>
-    
-                    
-                </div>
-                
-            </div>
-
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <h4 class="mua-ve-nhanh">MUA VÉ NHANH</h4>
-
-                <div class="sl-all">
-                    
-                    <select name="" id="" class="sl">
-                        <option value="" disabled selected hidden>Chọn phim</option>
-                        <option value="">Tây du ký</option>
-                        <option value="">Đi tìm nemo</option>
-                        <option value="">Doraemon</option>
-                    </select>        
-                   
-                    
-                    <select name="" id="" class="sl">
-                        <option value="" disabled selected hidden>Chọn rạp</option>
-                        <option value="">Rạp 1</option>
-                        <option value="">Rạp 2</option>
-                        <option value="">Rạp 3</option>
-                    </select>
-
-                    
-
-                    <select name="" id="" class="sl">
-                        <option value="" disabled selected hidden>Chọn ngày</option>
-                        <option value="">13/3/2023</option>
-                        <option value="">14/3/2023</option>
-                        <option value="">15/3/2023</option>
-                    </select>
-
-                    <select name="" id="" class="sl">
-                        <option value="" disabled selected hidden>Chọn suất</option>
-                        <option value="">Suất 1</option>
-                        <option value="">Suất 2</option>
-                        <option value="">Suất 3</option>
-                    </select>
-
-                    <div class="mua-ve-btn">
-                        <button class="mua-ve">MUA VÉ</button>
+                        {{/each}}
                     </div>
                 </div>
-
-                <h4 class="mua-ve-nhanh">PHIM ĐANG CHIẾU</h4>
-
-                <div class="row">
-                    <div class="col-md-13 col-sm-12 col-xs-12 movie-item">
-                        <a href="#">
-                            <img class="img-phim" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                        
-                            <div class="mua-ve-PDC-btn">
-                                <p><label class="old">C13</label></p>
-                                <button class="mua-ve-PDC">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                    </div>
-                    
-                    
-                </div>
-
-                <div class="xem-them-btn">
-                    <button class="xem-them">XEM THÊM</button>
-                </div>
-                
             </div>
         </div>
-
-        <h4>GALAXY CINEMA</h4>
-
-        <p>Khuyến mãi mới sẽ bao gồm các bài viết giới thiệu những ưu đãi, khuyến mãi, quà tặng, vô cùng hấp dẫn cho khách hàng như giảm giá vé, tặng vé, tặng voucher, bốc thăm trúng thưởng... Truy cập vào khuyến mãi mới, bạn sẽ tìm thấy vô vàn lợi ích tuyệt vời và giá trị đến từ Galaxy cùng các đối tác.</p>
     </div>
 
 </body>
+
 </html>
