--- a/src/resource/views/movie_blog_detail.hbs
+++ b/src/resource/views/movie_blog_detail.hbs
@@ -15,132 +15,101 @@
 </head>
 
 <body>
-    <div class="container-fluid pt-3">
-        <div class="row">
-            <div class="col-md-1"></div>
-
-            <div class="col-md-7">
-                {{#each tin}}
-                <div class="title mb-3">
-                    <h3>{{tieude}}</h3>
-                </div>
-
-                <div class="rate d-flex mb-3">
-                    <div class="view"><img id="icon__view" src="/img/view.png" alt="iconView"><span id="numView">
-                            {{luotxem}}</span></div>
-                </div>
-
-                <div class="content-cover">
-                    <div class="content">
-                        <p>{{ctnoidung1}}</p>
+    <div class="container-fluid">
+        <div class="row mt-4">
+            <div class="col-1"></div>
+            <div class="col-7">
+                <div class="col-11">
+                    {{#each tin}}
+                    <div class="link mb-3">
+                        <a href="/">Trang chủ</a>
+                        <label>></label>
+                        <a href="/blog-dien-anh">Blog điện ảnh</a>
+                        <label id="arrow">></label>
+                        Chi tiết blog điện ảnh
+                    </div>
+                    <div class="title mb-3">
+                        <h3>{{tieude}}</h3>
                     </div>
 
-                    <div class="img-content">
-                        <img src="{{cthinhanh1}}" alt="">
+                    <div class="rate d-flex mb-3">
+                        <div class="view"><img id="icon__view" src="/img/view.png" alt="iconView"><span id="numView">
+                                {{luotxem}}</span></div>
                     </div>
 
+                    <div class="content-cover">
+                        <div class="content">
+                            <p>{{ctnoidung1}}</p>
+                        </div>
 
-                    <div class="content">
-                        <p>{{ctnoidung2}}</p>
-                    </div>
-
-                    <div class="img-content">
-                        <img src="{{cthinhanh2}}" alt="">
-                    </div>
-
-
-                    <div class="content">
-                        <p>{{ctnoidung3}}</p>
-                    </div>
-
-                    <div class="img-content">
-                        <img src="{{cthinhanh3}}" alt="">
-                    </div>
+                        <div class="img-content">
+                            <img src="{{cthinhanh1}}" alt="">
+                        </div>
 
 
-                    <div class="content">
-                        <p>{{ctnoidung4}}</p>
-                    </div>
-                </div>
-                {{/each}}
-                <div class="related-blog mb-3">
-                    <h4>BÀI VIẾT LIÊN QUAN</h4>
-                    {{#each data}}
-                    <div class="mb-2">
-                        <a class="related-blog" href="">{{tieude}}</a>
+                        <div class="content">
+                            <p>{{ctnoidung2}}</p>
+                        </div>
+
+                        <div class="img-content">
+                            <img src="{{cthinhanh2}}" alt="">
+                        </div>
+
+
+                        <div class="content">
+                            <p>{{ctnoidung3}}</p>
+                        </div>
+
+                        <div class="img-content">
+                            <img src="{{cthinhanh3}}" alt="">
+                        </div>
+
+
+                        <div class="content">
+                            <p>{{ctnoidung4}}</p>
+                        </div>
                     </div>
                     {{/each}}
+                    <div class="related-blog mb-3">
+                        <h4>BÀI VIẾT LIÊN QUAN</h4>
+                        {{#each data}}
+                        <div class="mb-2">
+                            <a class="related-blog" href="{{matin}}">{{tieude}}</a>
+                        </div>
+                        {{/each}}
 
-                </div>
-
-
-            </div>
-
-            <div class="col-md-3 right">
-                <div class="quick-buy-ticket">
-                    <h4>MUA VÉ NHANH</h4>
-                </div>
-                <div class="select-all">
-                    <select name="" id="" class="select">
-                        <option value="" disabled selected hidden>Chọn phim</option>
-                        <option value="">Tây du ký</option>
-                        <option value="">Đi tìm nemo</option>
-                        <option value="">Doraemon</option>
-                    </select>
-                    <select name="" id="" class="select">
-                        <option value="" disabled selected hidden>Chọn rạp</option>
-                        <option value="">Rạp 1</option>
-                        <option value="">Rạp 2</option>
-                        <option value="">Rạp 3</option>
-                    </select>
-                    <select name="" id="" class="select">
-                        <option value="" disabled selected hidden>Chọn ngày</option>
-                        <option value="">13/3/2023</option>
-                        <option value="">14/3/2023</option>
-                        <option value="">15/3/2023</option>
-                    </select>
-                    <select name="" id="" class="select">
-                        <option value="" disabled selected hidden>Chọn suất</option>
-                        <option value="">Suất 1</option>
-                        <option value="">Suất 2</option>
-                        <option value="">Suất 3</option>
-                    </select>
-                    <div class="buy-ticket-btn">
-                        <button class="buy-ticket">MUA VÉ</button>
                     </div>
                 </div>
+            </div>
+            <div class="col-3 right">
                 <div class="now-showing">
                     <h4>PHIM ĐANG CHIẾU</h4>
                 </div>
-                {{#each allfilms}}
+                {{#each all4films}}
                 <div class="row">
-
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        
-                        <img class="movie-img" src="/img/{{poster}}" alt="">
+                    <div class="col right-movie-item">
+                        <img class="movie-img" src="/img/{{hinhngang}}" alt="" />
                         <div class="hidden-buy-ticket">
                             <p><label class="age">C{{dotuoi}}</label></p>
-
                             <a href="/chi-tiet-phim/{{maphim}}">
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
+                                <button class="hidden-buy-ticket-btn">CHI TIẾT</button>
                             </a>
                         </div>
-
                         <div class="right-movie-name">
                             <h5>{{tenphim}}</h5>
                         </div>
                     </div>
-
                 </div>
                 {{/each}}
                 <div class="view-more">
-                    <button class="view-more-btn">XEM THÊM <label id="right-arrow">→</label></button>
+                    <a href="/phim-dang-chieu">
+                        <button class="view-more-btn">
+                            XEM THÊM<label id="right-arrow">→</label>
+                        </button>
+                    </a>
                 </div>
             </div>
-
         </div>
-
-
     </div>
 
 </body>
