--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -140,7 +140,7 @@
                         GÓC ĐIỆN ẢNH
                     </a>
                     <ul class="dropdown-menu" style="background-color: black;">
-                        <li><a class="dropdown-item menu" style="color: white;" href="/the-loai-phim">THỂ LOẠI PHIM</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/top-phim">TOP PHIM HAY</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="/dien-vien">DIỄN VIÊN</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="/dao-dien">ĐẠO DIỄN</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="/binh-luan-phim">BÌNH LUẬN
@@ -149,15 +149,17 @@
                         </li>
                     </ul>
                 </li>
-                <li class="nav-item dropdown menu">
+                {{!-- <li class="nav-item dropdown menu">
                     <a class="nav-link dropdown-toggle text-white" role="button" data-bs-toggle=""
                         aria-expanded="false">
                         SỰ KIỆN
                     </a>
                     <ul class="dropdown-menu" style="background-color: black;">
                         <li><a class="dropdown-item menu" style="color: white;" href="/uu-dai">ƯU ĐÃI</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">PHIM HAY THÁNG</a></li>
                     </ul>
+                </li> --}}
+                <li class="nav-item menu">
+                    <a class="nav-link active text-white" aria-current="page" href="/uu-dai">ƯU ĐÃI</a>
                 </li>
                 <li class="nav-item menu">
                     <a class="nav-link active text-white" aria-current="page" href="/gia-ve">RẠP/GIÁ VÉ</a>
