--- a/src/resource/views/support.hbs
+++ b/src/resource/views/support.hbs
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/support.css">
     <title>Hỗ Trợ</title>
 </head>
@@ -16,8 +17,8 @@
 <body>
     <div class="container">
         <div class="row cover">
-            <div class="col-md-1"></div>
-            <div class="col-md-8">
+            <div class="col-2"></div>
+            <div class="col-8">
                 <!--Section: Contact v.2-->
                 <section class="mb-4">
                     <!--Section heading-->
@@ -96,7 +97,8 @@
                                 </div>
 
                                 <div class="form-group mt-3">
-                                    <button id="btnSubmit" class="btn btn-primary px-3 float-right" type="submit">GỬI</button>
+                                    <button id="btnSubmit" class="btn btn-primary px-3 float-right"
+                                        type="submit">GỬI</button>
                                 </div>
 
                                 <div class="status"></div>
@@ -129,64 +131,7 @@
                 <!--Section: Contact v.2-->
             </div>
 
-            <div class="col-md-3 right d-none">
-                <div class="quick-buy-ticket">
-                    <h4>MUA VÉ NHANH</h4>
-                </div>
-                <div class="select-all">
-                    <select name="" id="" class="select">
-                        <option value="" disabled selected hidden>Chọn phim</option>
-                        <option value="">Tây du ký</option>
-                        <option value="">Đi tìm nemo</option>
-                        <option value="">Doraemon</option>
-                    </select>
-                    <select name="" id="" class="select">
-                        <option value="" disabled selected hidden>Chọn rạp</option>
-                        <option value="">Rạp 1</option>
-                        <option value="">Rạp 2</option>
-                        <option value="">Rạp 3</option>
-                    </select>
-                    <select name="" id="" class="select">
-                        <option value="" disabled selected hidden>Chọn ngày</option>
-                        <option value="">13/3/2023</option>
-                        <option value="">14/3/2023</option>
-                        <option value="">15/3/2023</option>
-                    </select>
-                    <select name="" id="" class="select">
-                        <option value="" disabled selected hidden>Chọn suất</option>
-                        <option value="">Suất 1</option>
-                        <option value="">Suất 2</option>
-                        <option value="">Suất 3</option>
-                    </select>
-                    <div class="buy-ticket-btn">
-                        <button class="buy-ticket">MUA VÉ</button>
-                    </div>
-                </div>
-                <div class="now-showing">
-                    <h4>PHIM ĐANG CHIẾU</h4>
-                </div>
-
-                {{#each films}}
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="#">
-                            <img class="movie-img" src="/img/{{this.poster}}" alt="{{this.tenphim}}">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C{{dotuoi}}</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>{{this.tenphim}}</h5>
-                        </div>
-                    </div>
-                </div>
-                {{/each}}
-
-                <div class="view-more">
-                    <button class="view-more-btn">XEM THÊM <label id="right-arrow">→</label></button>
-                </div>
-            </div>
+            
         </div>
     </div>
 </body>
@@ -205,7 +150,7 @@
 
     function check(msg, element) {
         formContact.addEventListener('submit', function (event) {
-        event.preventDefault();
+            event.preventDefault();
         });
         msg__text.innerText = msg
         msg__passEq.hidden = false
@@ -214,21 +159,21 @@
 
     btnSubmit.addEventListener("click", function (e) {
         if (name.value.length == 0) {
-        e.preventDefault();
-        check("Vui lòng nhập tên của bạn", name)
-        } else if (phone.value.length < 10){
-        e.preventDefault();
-        check("Vui lòng nhập số điện thoại", phone)
-        } else if(subject.value.length == 0) {
-        e.preventDefault();
-        check("Vui lòng nhập chủ đề", subject)
-        }else if(message.value.length == 0) {
-        e.preventDefault();
-        check("Vui lòng nhập nội dung", message)
+            e.preventDefault();
+            check("Vui lòng nhập tên của bạn", name)
+        } else if (phone.value.length < 10) {
+            e.preventDefault();
+            check("Vui lòng nhập số điện thoại", phone)
+        } else if (subject.value.length == 0) {
+            e.preventDefault();
+            check("Vui lòng nhập chủ đề", subject)
+        } else if (message.value.length == 0) {
+            e.preventDefault();
+            check("Vui lòng nhập nội dung", message)
         } else {
-        formContact.submit()
+            formContact.submit()
         }
-        
+
     })
 
     name.addEventListener('keypress', () => {
